# labs-releases

./: README.md
extractors/: README.md
extractors/lobshot/: README.md  lobshot_config_extractor.py  requirements.txt
extractors/redlinestealer/: README.md  redlinestealer_config_extractor.py
extractors/remcos/: README.md  remcos_configuration_extractor.py
indicators/: README.md
indicators/app-bound_bypass/: README.md  (+2 more)
nightMARE/: README.md  pyproject.toml
nightMARE/src/nightmare/: cast.py  utils.py  win32.py
nightMARE/src/nightmare/analysis/: bits.py  emulation.py
nightMARE/src/nightmare/analysis/compression/: lznt1.py
nightMARE/src/nightmare/malware/blister/: configuration.py  crypto.py
nightMARE/src/nightmare/malware/ghostpulse/: payload.py
nightMARE/src/nightmare/malware/icedid/: compression.py  configuration.py  core.py  crypto.py  custom_pe.py  fake_gzip.py
nightMARE/src/nightmare/malware/latrodectus/: crypto.py
nightMARE/src/nightmare/malware/lobshot/: configuration.py  crypto.py
nightMARE/src/nightmare/malware/netwire/: configuration.py
nightMARE/src/nightmare/malware/nighthawk/: crypto.py
nightMARE/src/nightmare/malware/redlinestealer/: configuration.py
nightMARE/src/nightmare/malware/remcos/: c2.py  configuration.py
nightMARE/src/nightmare/malware/smokeloader/: configuration.py
nightMARE/src/nightmare/malware/stealc/: configuration.py  crypto.py
nightMARE/src/nightmare/malware/strelastealer/: payload.py
nightMARE/src/nightmare/malware/xorddos/: configuration.py  core.py  crypto.py  strings.py
tools/: README.md
(+124 files in other folders)
