[build-system]
requires = ["setuptools"]

[project]
name = "nightMARE"
version = "0.13.2"
dependencies = [
    "unicorn",
    "lief",
    "capstone==5.0.0",
    "construct",
    "yara-python",
    "requests",
    "smda",
    "pycryptodome",
    "dotnetfile",
    "Pillow==11.0.0",
]
requires-python = ">=3.10"